--- a/S3.md
+++ b/S3.md
@@ -12,59 +12,59 @@ Você pode armazenar dados com padrões de acesso alterados ou desconhecidos no 
 ### Gerenciamento de armazenamento:
 O Amazon S3 tem recursos de gerenciamento de armazenamento que você pode usar para gerenciar custos, atender aos requisitos normativos, reduzir a latência e salvar várias cópias distintas de seus dados para requisitos de compatibilidade.
 
-S3 Lifecycle: configura uma política de ciclo de vida para gerenciar seus objetos e armazená-los de maneira econômica durante todo o ciclo de vida. Você pode fazer a transição de objetos para outras classes de armazenamento do S3 ou expirar objetos que atingem o fim de suas vidas.
+- S3 Lifecycle: configura uma política de ciclo de vida para gerenciar seus objetos e armazená-los de maneira econômica durante todo o ciclo de vida. Você pode fazer a transição de objetos para outras classes de armazenamento do S3 ou expirar objetos que atingem o fim de suas vidas.
 
-Bloqueio de objetos do S3: evita que os objetos do Amazon S3 sejam excluídos ou substituídos por um período de tempo fixo ou indefinidamente. Você pode usar o bloqueio de objetos para ajudar a atender aos requisitos regulamentares que exigem armazenamento write-once-read-many (WORM) ou simplesmente adicionar outra camada de proteção contra alterações e exclusão de objetos.
+- Bloqueio de objetos do S3: evita que os objetos do Amazon S3 sejam excluídos ou substituídos por um período de tempo fixo ou indefinidamente. Você pode usar o bloqueio de objetos para ajudar a atender aos requisitos regulamentares que exigem armazenamento write-once-read-many (WORM) ou simplesmente adicionar outra camada de proteção contra alterações e exclusão de objetos.
 
-Replicação do S3: replica objetos e seus respectivos metadados e etiquetas de objeto para um ou mais buckets de destino nas mesmas Regiões da AWS, ou diferentes, para reduzir a latência, compatibilidade, segurança e outros casos de uso.
+- Replicação do S3: replica objetos e seus respectivos metadados e etiquetas de objeto para um ou mais buckets de destino nas mesmas Regiões da AWS, ou diferentes, para reduzir a latência, compatibilidade, segurança e outros casos de uso.
 
-Operações em lote do S3: gerencia bilhões de objetos em escala com uma única solicitação de API do S3 ou com alguns cliques no console do Amazon S3. Você pode usar operações em lote para executar operações como Copy (Copiar), Invoke AWS Lambda function (Chamar função Lambda da ) e Restore (Restaurar) em milhões ou bilhões de objetos.
+- Operações em lote do S3: gerencia bilhões de objetos em escala com uma única solicitação de API do S3 ou com alguns cliques no console do Amazon S3. Você pode usar operações em lote para executar operações como Copy (Copiar), Invoke AWS Lambda function (Chamar função Lambda da ) e Restore (Restaurar) em milhões ou bilhões de objetos.
 
 ### Gerenciamento de acesso:
 O Amazon S3 fornece recursos para auditoria e gerenciamento de acesso a seus buckets e objetos. Por padrão, os buckets do S3 e os objetos deles são privados. Você tem acesso somente aos recursos do S3 criados. Para conceder permissões de recursos detalhadas que suportam seu caso de uso específico ou para auditar as permissões de seus recursos do Amazon S3, você pode usar os seguintes recursos.
 
-Bloqueio de acesso público do S3: bloqueie o acesso público a buckets e objetos do S3. Por padrão, as configurações de bloqueio de acesso público são ativadas no nível da conta e do bucket.
+- Bloqueio de acesso público do S3: bloqueie o acesso público a buckets e objetos do S3. Por padrão, as configurações de bloqueio de acesso público são ativadas no nível da conta e do bucket.
 
-AWS Identity and Access Management (IAM): o IAM é um serviço da Web que ajuda você a controlar de maneira segura o acesso aos recursos da AWS, incluindo recursos do Amazon S3. Com o IAM, é possível gerenciar, de maneira centralizada, permissões que controlam quais recursos da AWS os usuários poderão acessar. Você usa o IAM para controlar quem é autenticado (fez login) e autorizado (tem permissões) a usar os recursos.
+- AWS Identity and Access Management (IAM): o IAM é um serviço da Web que ajuda você a controlar de maneira segura o acesso aos recursos da AWS, incluindo recursos do Amazon S3. Com o IAM, é possível gerenciar, de maneira centralizada, permissões que controlam quais recursos da AWS os usuários poderão acessar. Você usa o IAM para controlar quem é autenticado (fez login) e autorizado (tem permissões) a usar os recursos.
 
-Políticas de buckets: use a linguagem de política baseada em IAM para configurar permissões baseadas em recursos para os buckets do S3 e os objetos neles contidos.
+- Políticas de buckets: use a linguagem de política baseada em IAM para configurar permissões baseadas em recursos para os buckets do S3 e os objetos neles contidos.
 
-Pontos de acesso do Amazon S3: configure endpoints nomeados com políticas de acesso dedicadas para gerenciar o acesso a dados em escala para conjuntos de dados compartilhados no Amazon S3.
+- Pontos de acesso do Amazon S3: configure endpoints nomeados com políticas de acesso dedicadas para gerenciar o acesso a dados em escala para conjuntos de dados compartilhados no Amazon S3.
 
-Listas de controle de acesso (ACLs): conceda permissões de leitura e gravação para buckets e objetos individuais a usuários autorizados. Como regra geral, recomendamos o uso de políticas baseadas em recursos do S3 (políticas de bucket e políticas de ponto de acesso) ou políticas do IAM para controle de acesso, em vez de ACLs. ACLs são mecanismos de controle de acesso que antecedem políticas baseadas em recursos e IAM. Para obter mais informações sobre quando você usaria ACLs, em vez de políticas baseadas em recursos ou políticas do IAM, consulte Diretrizes para políticas de acesso.
+- Listas de controle de acesso (ACLs): conceda permissões de leitura e gravação para buckets e objetos individuais a usuários autorizados. Como regra geral, recomendamos o uso de políticas baseadas em recursos do S3 (políticas de bucket e políticas de ponto de acesso) ou políticas do IAM para controle de acesso, em vez de ACLs. ACLs são mecanismos de controle de acesso que antecedem políticas baseadas em recursos e IAM. Para obter mais informações sobre quando você usaria ACLs, em vez de políticas baseadas em recursos ou políticas do IAM, consulte Diretrizes para políticas de acesso.
 
-S3 Object Ownership: desabilite as ACLs e assuma a propriedade de cada objeto de seu bucket simplificando o gerenciamento de acesso para dados armazenados no Amazon S3. Como proprietário do bucket, você automaticamente tem a propriedade e o controle total sobre todos os objetos de seu bucket, e o controle de acesso a seus dados é baseado em políticas.
+- S3 Object Ownership: desabilite as ACLs e assuma a propriedade de cada objeto de seu bucket simplificando o gerenciamento de acesso para dados armazenados no Amazon S3. Como proprietário do bucket, você automaticamente tem a propriedade e o controle total sobre todos os objetos de seu bucket, e o controle de acesso a seus dados é baseado em políticas.
 
-Analisador de acesso para S3: avalie e monitore suas políticas de acesso ao bucket do S3, garantindo que as políticas forneçam apenas o acesso pretendido aos seus recursos do S3.
+- Analisador de acesso para S3: avalie e monitore suas políticas de acesso ao bucket do S3, garantindo que as políticas forneçam apenas o acesso pretendido aos seus recursos do S3.
 
 ### Processamento de dados:
 Para transformar dados e acionar fluxos de trabalho para automatizar uma variedade de outras atividades de processamento em escala, você pode usar os seguintes recursos.
 
-S3 Object Lambda: adiciona seu próprio código às solicitações GET, HEAD e LIST do S3 para modificar e processar dados, conforme eles são retornados para uma aplicação. Filtra linhas, redimensiona imagens dinamicamente, edita dados confidenciais e muito mais.
+- S3 Object Lambda: adiciona seu próprio código às solicitações GET, HEAD e LIST do S3 para modificar e processar dados, conforme eles são retornados para uma aplicação. Filtra linhas, redimensiona imagens dinamicamente, edita dados confidenciais e muito mais.
 
-Notificações de eventos: aciona fluxos de trabalho que usam o Amazon Simple Notification Service (Amazon SNS), o Amazon Simple Queue Service (Amazon SQS) e o AWS Lambda quando uma alteração for feita em seus recursos do S3.
+- Notificações de eventos: aciona fluxos de trabalho que usam o Amazon Simple Notification Service (Amazon SNS), o Amazon Simple Queue Service (Amazon SQS) e o AWS Lambda quando uma alteração for feita em seus recursos do S3.
 
 ### Registro e monitoramento do armazenamento:
 O Amazon S3 fornece ferramentas de registro e monitoramento que você pode usar para monitorar e controlar como seus recursos do Amazon S3 estão sendo usados. Para obter mais informações, consulte Ferramentas de monitoramento.
 
-Ferramentas de monitoramento automatizadas
-Métricas do Amazon CloudWatch para o Amazon S3: acompanha a integridade operacional de seus recursos do S3 e configura alertas de faturamento quando as cobranças estimadas atingirem um limite definido pelo usuário.
+#### Ferramentas de monitoramento automatizadas
+- Métricas do Amazon CloudWatch para o Amazon S3: acompanha a integridade operacional de seus recursos do S3 e configura alertas de faturamento quando as cobranças estimadas atingirem um limite definido pelo usuário.
 
-AWS CloudTrail: registra ações executadas por um usuário, uma função ou um AWS service (Serviço da AWS) no Amazon S3. Os logs do CloudTrail fornecem rastreamento detalhado de API para operações no nível de bucket e objeto do S3.
+- AWS CloudTrail: registra ações executadas por um usuário, uma função ou um AWS service (Serviço da AWS) no Amazon S3. Os logs do CloudTrail fornecem rastreamento detalhado de API para operações no nível de bucket e objeto do S3.
 
-Ferramentas de monitoramento manual
-Log de acesso ao servidor: fornece detalhes sobre as solicitações que são feitas a um bucket. Você pode usar logs de acesso ao servidor para muitos casos de uso, como conduzir auditorias de segurança e acesso, saber mais sobre sua base de clientes e entender sua fatura do Amazon S3.
+#### Ferramentas de monitoramento manual
+- Log de acesso ao servidor: fornece detalhes sobre as solicitações que são feitas a um bucket. Você pode usar logs de acesso ao servidor para muitos casos de uso, como conduzir auditorias de segurança e acesso, saber mais sobre sua base de clientes e entender sua fatura do Amazon S3.
 
-AWSTrusted Advisor: avalia sua conta usando verificações de práticas recomendadas da AWS para identificar maneiras de otimizar sua infraestrutura da AWS, melhorar a segurança e a performance, reduzir custos e monitorar cotas de serviço. Em seguida, você pode seguir as recomendações para otimizar seus serviços e recursos.
+- AWSTrusted Advisor: avalia sua conta usando verificações de práticas recomendadas da AWS para identificar maneiras de otimizar sua infraestrutura da AWS, melhorar a segurança e a performance, reduzir custos e monitorar cotas de serviço. Em seguida, você pode seguir as recomendações para otimizar seus serviços e recursos.
 
 ### Análises e insights:
 O Amazon S3 oferece recursos para ajudá-lo a obter visibilidade do uso do armazenamento, o que permite que você entenda melhor, analise e otimize seu armazenamento em escala.
 
-Amazon S3 Storage Lens: entende, analisa e otimiza seu armazenamento. O S3 Storage Lens fornece mais de 29 métricas de uso e atividade e painéis interativos para agregar dados de toda a sua organização, contas específicas, Regiões da AWS, buckets ou prefixos.
+- Amazon S3 Storage Lens: entende, analisa e otimiza seu armazenamento. O S3 Storage Lens fornece mais de 29 métricas de uso e atividade e painéis interativos para agregar dados de toda a sua organização, contas específicas, Regiões da AWS, buckets ou prefixos.
 
-Análise de classe de armazenamento: analisa padrões de acesso ao armazenamento para decidir quando é hora de mover seus dados para uma classe de armazenamento mais econômica.
+- Análise de classe de armazenamento: analisa padrões de acesso ao armazenamento para decidir quando é hora de mover seus dados para uma classe de armazenamento mais econômica.
 
-Inventário do S3: audita e relata sobre objetos e seus metadados correspondentes e configura outros recursos do Amazon S3 para executar ações nos relatórios de inventário. Por exemplo, você pode gerar relatórios sobre o status da replicação e da criptografia de seus objetos. Para obter uma lista de todos os metadados disponíveis para cada objeto nos relatórios de inventário, consulte Lista de inventário do Amazon S3.
+- Inventário do S3: audita e relata sobre objetos e seus metadados correspondentes e configura outros recursos do Amazon S3 para executar ações nos relatórios de inventário. Por exemplo, você pode gerar relatórios sobre o status da replicação e da criptografia de seus objetos. Para obter uma lista de todos os metadados disponíveis para cada objeto nos relatórios de inventário, consulte Lista de inventário do Amazon S3.
 
 ### Consistência forte:
 O Amazon S3 oferece uma forte consistência de leitura após gravação para solicitações de PUT e DELETE de objetos no bucket do Amazon S3 em todas as Regiões da AWS. Isso se aplica a ambas as gravações em novos objetos, bem como solicitações PUT que sobrescrevem objetos existentes e solicitações DELETE. Além disso, as operações de leitura no Amazon S3 Select, listas de controle de acesso (ACLs) do Amazon S3, etiquetas de objeto do Amazon S3 e metadados de objeto (por exemplo, objeto HEAD) são fortemente consistentes.
