--- a/S3.md
+++ b/S3.md
@@ -77,3 +77,5 @@ Para armazenar seus dados no Amazon S3, crie um bucket e especifique um nome de 
 O S3 fornece recursos que você pode configurar para oferecer suporte ao seu caso de uso específico. Você pode usar o versionamento do S3 para manter várias versões de um objeto no mesmo bucket que permite que você restaure objetos excluídos ou substituídos acidentalmente.
 
 Os buckets e os objetos neles são privados e poderão ser acessados somente se você conceder explicitamente permissões de acesso. Você pode usar políticas de bucket, políticas do AWS Identity and Access Management (IAM), listas de controle de acesso (ACLs) e pontos de acesso do S3 para gerenciar o acesso.
+
+Link útil: https://aws.amazon.com/pt/s3/
